2001-12-06  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/web/web.py (QMTestServer.HandleSaveResults): Fix
	typos.

	* scripts/qm-release: Fix typo.
	
  	* scripts/qm-release: Update documentation copying rules. 

	* README: Remove stale link.
	* doc/manual/test-tour.xml: Fix typos.
	* qm/Makefile.in (SCRIPTS): Do not hard code prefix.
	* qm/test/cmdline.py: Do not import run.
	* scripts/qm-release (build_exec): New function.

2001-12-05  Mark Mitchell  <mark@codesourcery.com>

	* configure.in: Remove divert statements.

	* configure.in: Add --enable-maintainer-mode.
	* standard.mk.in (docbook-html): Do not create an HTML tar file.
	* scripts/qm-release: Copy documentation to source release.

	* qm/test/classes/command.py (ShellCommandTest): Use
	ShellCommandTest.command_shell, not just command_shell, as a
	context variable.
	(ShellScriptTest): Use ShellScriptTest.script_shell, not just
	script_shell.

	* standard.mk.in (PRINTTEX): Fix -- problem with TeX formatting.
	* doc/qm.mod (dashdash): Remove FIXME comment.
	* doc/manual/common-manual.xml: Update.
	* doc/manual/text-manual.xml: Fix command-line reference.
	Spell-check.
	* doc/manual/test-tour.xml: Spell-check.
	* qm/cmdline.py (CommandParser.GetOptionsHelp): Tweak help
	string formatting.
	* qm/platform_unix.py (SignalException): Derive from
	RuntimeError.
	* qm/web.py (DtmlPage.GenerateHtmlHeader): Allow pages to
	insert additional headers.
	(WebServer.Run): Handle exceptions.
	(_handle_root): Fix typo.
	* qm/test/base.py (create_database): Raise a RuntimeError,
	not a ValueError, when something goes wrong.
	* qm/test/cmdline.py (Command._ExecuteRun): Create an
	ExecutionThread to run the tests.
	* qm/test/execution_thread.py: New file.
	* qm/test/run.py: Remove.
	* qm/test/web/web.py (DefaultDtmlPage.__init__): Remove
	menu logic.
	(DefaultDtmlPage.GenerateStartBody): Likewise.
	(DtmlPage): Rename to ...
	(QMTestPage): ... this.
	(QMTestPage.__init__): Include menu logic.